--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,9 @@
 		
 		<%= yield %>
 
-		<div data-role="footer" data-position="fixed" data-tap-toggle="false" class="jqm-footer">
-			<p>XBoks <span class="jqm-version"></span></p>
-			<p>Copyright 2013 Harm de Laat</p>
+		<div id="footer" data-role="footer" data-position="fixed" data-tap-toggle="false" class="jqm-footer">
+			<p id="logo"></p>
+			<p id="copyright"><small>2014 - harmdelaat.com</small></p>
 		</div><!-- /footer -->
 		
 </div><!-- /page -->
