--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,17 @@
  *= require_tree .
  *= require jquery.mobile
  */
+
+ #logo {
+ 	background: url(x10switch.png) no-repeat center;
+ 	height:100px;
+ }
+
+ #footer {
+ 	background-color: #fff;
+ }
+
+ #footer #copyright {
+ 	background-color: #eee;
+ 	text-align: center;
+ }
