--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,9 @@
   <title>Switch</title>
   
   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+  <link rel="apple-touch-icon" href="/x10switch_icon.png"/>
+
+
 
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
@@ -21,8 +24,6 @@
 		</div><!-- /footer -->
 		
 </div><!-- /page -->
-
-
-
+s
 </body>
 </html>
