fixed touch icon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title>Switch</title>
   
   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-  <link rel="apple-touch-icon" href="/x10switch_icon.png"/>
+  <link rel="apple-touch-icon" href="/assets/x10switch_icon.png"/>
 
 
 
