--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,16 @@
 <head>
   <title>Switch</title>
   
-  <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+
+      <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    
+        <!-- iPhone (Retina) SPLASHSCREEN-->
+        <link href="startup.png" media="(device-width: 320px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image">
+
+
   <link rel="apple-touch-icon" href="/assets/x10switch_icon.png"/>
 
 
