added deploy files

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,17 @@
 <div data-role="tabs">
 	<div data-role="navbar">
 		<ul>
-	      <li id="scenes_tab"><a href="#scenes" data-theme="a" data-ajax="false" id="tab1">Scenes</a></li>
+				<li id="home_tab"><a href="#home" data-theme="a" data-ajax="false" id="tab1">Home</a></li>
+	      <li id="scenes_tab"><a href="#scenes" data-theme="a" data-ajax="false">Scenes</a></li>
 	      <li><a href="#devices"  data-theme="a" data-ajax="false">Manual</a></li>
 	    </ul>
+	</div>
+
+	<div id="home" class="ui-content">
+		<img src="http://192.168.0.152/live/2/jpeg.jpg"/>
+		<video src="http://192.168.0.152/live/2/mjpeg.jpg" controls="true" width="300"/>
+		
+
 	</div>
 
 	<div id="scenes" class="ui-content">
