--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
 	</div>
 	
 	<div id="scenes" class="ui-content">
-		<h1>Scenes</h1>
+		<h1>Scenes (<%= @scenes.size %>)</h1>
 		<ul data-role="listview">
 			<% @scenes.each do |scene| %>
 		    	<li data-role="button"><a href="#">
